--- a/design/additemdesign.css
+++ b/design/additemdesign.css
@@ -1,10 +1,10 @@
 
 @import url('https://fonts.googleapis.com/css?family=Numans');
 
-html,body{
+html,body, a{
 height: 100%;
 font-family: 'Numans', sans-serif;
-color: white!important;
+color: black!important;
 }
 
 label{
